--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
       <span class="section-tag">02 — 專長與興趣</span>
       <h2 class="section-title">我擅長的事</h2>
       <ul class="skill-list">
-        <li><span class="skill-dot"></span>跨領域整合</li>
-        <li><span class="skill-dot"></span>教育</li>
-        <li><span class="skill-dot"></span>輔助科技</li>
-        <li><span class="skill-dot"></span>金融</li>
-        <li><span class="skill-dot"></span>系統合作</li>
-        <li><span class="skill-dot"></span>心理輔導</li>
+        <li><a href="integration.html" class="skill-link"><span class="skill-dot"></span>跨領域整合</a></li>
+        <li><a href="education.html" class="skill-link"><span class="skill-dot"></span>教育</a></li>
+        <li><a href="assistive-tech.html" class="skill-link"><span class="skill-dot"></span>輔助科技</a></li>
+        <li><a href="finance.html" class="skill-link"><span class="skill-dot"></span>金融</a></li>
+        <li><a href="system-cooperation.html" class="skill-link"><span class="skill-dot"></span>系統合作</a></li>
+        <li><a href="counseling.html" class="skill-link"><span class="skill-dot"></span>心理輔導</a></li>
       </ul>
     </section>
 
