Fix HTML structure and add image to hero section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </nav>
 
   <main>
+    <img src="images/assistive-tech.png" style="max-width:100%;">
     <section id="hero" class="hero">
       <p class="hero-label">你好，我是</p>
       <h1 class="hero-title">
@@ -90,3 +91,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
