--- a/integration.html
+++ b/integration.html
@@ -9,7 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="page-nano">
+<section class="page-block">
+  <h2>跨領域整合</h2>
+  <p>我把教育、輔助科技、心理與系統協作整合成可落地的方案與教材。</p>
+
+  <img class="page-image" src="./images/integration.png" alt="跨領域整合">
+</section>
+  <body class="page-nano">
   <div class="noise"></div>
   <div class="gradient-orb orb-1"></div>
   <div class="gradient-orb orb-2"></div>
@@ -52,3 +58,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
