--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
       </div>
     </section>
 
+<section class="integration-section">
+
+  <div class="integration-image">
+    <img src="./images/integration.png" alt="跨領域整合">
+  </div>
+
+  <div class="integration-text">
+    <h1>跨領域整合
+    </h1>
+  </div>
+
+</section>
+    
     <section id="skills" class="section skills">
       <span class="section-tag">02 — 專長與興趣</span>
       <h2 class="section-title">我擅長的事</h2>
@@ -90,5 +103,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
