--- a/integration.html
+++ b/integration.html
@@ -15,7 +15,7 @@
 
   <img class="page-image" src="./images/integration.png" alt="跨領域整合">
 </section>
-  <body class="page-nano">
+<body class="page-integration">
   <div class="noise"></div>
   <div class="gradient-orb orb-1"></div>
   <div class="gradient-orb orb-2"></div>
@@ -58,4 +58,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
