--- a/integration.html
+++ b/integration.html
@@ -9,12 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<section class="page-block">
-  <h2>跨領域整合</h2>
-  <p>我把教育、輔助科技、心理與系統協作整合成可落地的方案與教材。</p>
 
-  <img class="page-image" src="./images/integration.png" alt="跨領域整合">
-</section>
 <body class="page-integration">
   <div class="noise"></div>
   <div class="gradient-orb orb-1"></div>
@@ -29,24 +24,26 @@
       <a href="index.html#contact">聯絡</a>
     </div>
     <button class="nav-toggle" aria-label="選單">
-      <span></span>
-      <span></span>
-      <span></span>
+      <span></span><span></span><span></span>
     </button>
   </nav>
 
   <main class="detail-main">
     <a href="index.html#skills" class="detail-back">← 回到專長</a>
+
     <div class="detail-layout">
+      <!-- 圖片：左 -->
       <figure class="detail-figure">
-        <img src="assets/integration.png" alt="跨領域整合" class="detail-img" />
+        <img src="./images/integration.png" alt="跨領域整合" class="detail-img" />
       </figure>
+
+      <!-- 文字：右 -->
       <article class="detail-article">
         <h1 class="detail-title">跨領域整合</h1>
         <div class="detail-content">
-        <p>我相信人的需求往往橫跨多個面向，單一專業不足以完整承接。我致力於將心理輔導、教育、輔助科技與金融等領域串聯起來，在實務中與不同專業協作，讓個人與家庭獲得更連貫、更貼近生活的支持。</p>
-        <p>透過跨領域的視角，我能協助你在複雜情境中看見資源、找到路徑，讓多元的專業一起為你工作，而不是各自為政。</p>
-      </div>
+          <p>我相信人的需求往往橫跨多個面向，單一專業不足以完整承接。我致力於將心理輔導、教育、輔助科技與金融等領域串聯起來，在實務中與不同專業協作，讓個人與家庭獲得更連貫、更貼近生活的支持。</p>
+          <p>透過跨領域的視角，我能協助你在複雜情境中看見資源、找到路徑，讓多元的專業一起為你工作，而不是各自為政。</p>
+        </div>
       </article>
     </div>
   </main>
@@ -58,5 +55,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
