--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
       </div>
     </section>
 
-<section class="integration-section">
 
+<img src="./images/integration.png" ...>
+
+    
   <div class="integration-image">
     <img src="./images/integration.png" alt="跨領域整合">
   </div>
@@ -103,6 +105,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
